--- a/code/dev/parts/apps/new.html
+++ b/code/dev/parts/apps/new.html
@@ -91,7 +91,7 @@
           </div>
 -->
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
-            <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the app (300 characters max)">Comment</label>
+            <label for="comment" class="col-sm-2 control-label">Comment</label>
             <div class="col-sm-10">
               <div class="col-sm-12 form-group">
                 <textarea id="comment" placeholder="Comment" ng-maxlength="300" class="form-control inline-block" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
