--- a/code/dev/parts/dns_zone_records/edit.html
+++ b/code/dev/parts/dns_zone_records/edit.html
@@ -136,7 +136,7 @@
               <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
-              <button class="btn btn-success" ng-disabled="editForm.$invalid" ng-click="updateDNSZoneRecord(model)" uib-tooltip="{{dnsZone_update_help_info}}">
+              <button class="btn btn-success"  ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="editForm.$invalid || isReadOnly()" ng-click="updateDNSZoneRecord(model)" uib-tooltip="{{dnsZone_update_help_info}}">
                 <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-file'"></i>&nbsp; Update
               </button>
             </div>
