--- a/code/dev/parts/dns_zones/new.html
+++ b/code/dev/parts/dns_zones/new.html
@@ -58,10 +58,10 @@
               <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
-              <button class="btn btn-success" id="create_dns_zone" ng-disabled="disableSubmit(model) ||createForm.$invalid" ng-click="createDNSZone(model,false)">
+              <button class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" id="create_dns_zone" ng-disabled="disableSubmit(model) ||createForm.$invalid || isReadOnly()" ng-click="createDNSZone(model,false)">
                 <i class="glyphicon" ng-class="_loading?'glyphicon-refresh spin':'glyphicon-ok'"></i> &nbsp; Create DNS Zone
               </button>
-              <button class="btn btn-success" id="create_dns_zone_and_add_more" ng-disabled="disableSubmit(model) || createForm.$invalid" ng-click="createDNSZone(model,true);createForm.$setPristine()">
+              <button class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" id="create_dns_zone_and_add_more" ng-disabled="disableSubmit(model) || createForm.$invalid || isReadOnly()" ng-click="createDNSZone(model,true);createForm.$setPristine()">
                 <i class="glyphicon" ng-class="_loading?'glyphicon-refresh spin':'glyphicon-ok'"></i> &nbsp; Create And Add More
               </button>
             </div>
