--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -65,7 +65,7 @@
             <div class="col-md-12">
               <div class="pull-left form-inline">
                 <div class="form-group">
-                  <a ui-sref=".new" class="btn btn-success" ng-disabled="_loading">
+                  <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()">
                     <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New App
                   </a>
                 </div>
@@ -169,7 +169,7 @@
                   <a ui-sref=".configure({id: item.id})" ng-if="!item.loading" uib-tooltip="Advanced Edit App">
                     <i class="glyphicon glyphicon-cog"></i>
                   </a>
-                  <a href="" ng-if="!item.loading" ng-click="deleteApp(item)" uib-tooltip="Delete App">
+                  <a href="" ng-if="!item.loading" ng-class="{'disabled': isReadOnly() }"ng-click="deleteApp(item)" uib-tooltip="Delete App">
                     <i class="glyphicon glyphicon-trash"></i>
                   </a>
                   <a href="#/mobile/traffic" ng-if="!item.loading" ng-click="storeToStorage(item)" uib-tooltip="Stats">
